--- a/example/package.json
+++ b/example/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "PushToTalkExample",
+  "name": "react-native-push-to-talk-example",
+  "description": "Example app for react-native-push-to-talk",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
-    "pods": "pod-install --quiet"
+    "start": "react-native start"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.1"
+    "react": "17.0.2",
+    "react-native": "0.68.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.7",
-    "@types/metro-config": "^0.76.3",
-    "metro-react-native-babel-preset": "0.76.5",
-    "babel-plugin-module-resolver": "^5.0.0"
-  },
-  "engines": {
-    "node": ">=16"
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "metro-react-native-babel-preset": "^0.67.0"
   }
 }
